# floor-plan-reviewer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/frontend-style/: SKILL.md
.lavish/: s00_propose-v02-review.html  s01_floorplan-studio-plan.html  s02_feedback.md  s03_frontend-shared-editing-plan.html  s04_plan-canvas-parity-prd.html  s05_231-pfr-front-plan-comparison.html  s06_agent-sdk-migration-plan.html  s07_restyle-plan.html
231-peats-ferry-rd/: changes_v01.json  changes_v02.json  changes_v03.json  plan_v03.json  propose_v01.md  propose_v02.md  propose_v03.md  rent_baseline.md  scope.md
ai_specs/: s01_floorplan-studio-plan.md
app/: .dockerignore  .env.example  Makefile  docker-compose.yml
app/demo/: DEMO.md  e2e_feature_matrix.py  e2e_golden_path.py  narration.py  pyproject.toml  record_product_tour.py  record_walkthrough.py  record_whats_new.py
app/demo/artifacts/: feature_matrix_report.json  feature_matrix_report.md  product_tour.srt  walkthrough.srt  walkthrough.webm  whats_new.srt
app/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx  api.ts  editing.ts  features.ts  geometry.ts  styles.css  types.ts
app/frontend/src/components/: CanvasStage.tsx  ChangeList.tsx  Coach.tsx  ContextBar.tsx  Dock.tsx  Inspector.tsx  LevelTabs.tsx  PlanCanvas.tsx  Register.tsx  RentPanel.tsx  ReviewStrip.tsx  ShortcutSheet.tsx  Sidebar.tsx  StatsBar.tsx
app/frontend/src/pages/: Admin.tsx  Ingest.tsx  Library.tsx  Review.tsx
app/seed/: changes_meta.json  original_v1.json  plan_v01.json  plan_v02.json
app/services/backend-api/: Dockerfile  pyproject.toml
app/services/backend-api/src/backend_api/: config.py  db.py  events.py  main.py  seed.py
app/services/plan-agent/: Dockerfile  pyproject.toml
app/services/plan-agent/src/plan_agent/: agent.py  comps.py  ingest.py  llm.py  main.py
app/services/plan-agent/tests/: test_llm.py
schema/: changes.schema.json
scripts/: render_overlay.py  render_plan.py
