[project]
name = "backend-api"
version = "0.1.0"
description = "Floor-Plan Studio backend: plans, reviews, versions, comment jobs, SSE, exports."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "plan-core",
]

[dependency-groups]
dev = ["pytest>=8.3", "ruff>=0.14"]

[tool.uv.sources]
plan-core = { path = "../../packages/plan-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend_api"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
