[project]
name = "plan-agent"
version = "0.1.0"
description = "Floor-Plan Studio agent: comments → typed geometry ops (DeepSeek default), Claude vision ingest, Tavily rent comps."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-ai-slim[openai,anthropic]>=1.44",
    "httpx>=0.27",
    "plan-core",
]

[dependency-groups]
dev = ["pytest>=8.3", "ruff>=0.14"]

[tool.uv.sources]
plan-core = { path = "../../packages/plan-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plan_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
